# kafl.targets

./: .gitignore  .gitmodules  LICENSE.md  README.md  kafl_user.h  nyx_api.h
linux-kernel/: .gitignore  Makefile  README.md  config.vanilla.virtio  kafl.yaml  kafl_config.yaml  kafl_gui.example.txt  kafl_plot.example.txt
linux-user/: .clang-format  Makefile.inc
linux-user/dvkm/: .gitignore  Makefile  kafl.yaml
linux-user/execserver/: Makefile
linux-user/forkserver/: .gitignore  Makefile  agent.sh
linux-user/fs_fuzzer/: .gitignore  Makefile  kafl.yaml
linux-user/initrd_template/: init  loader.sh
linux-user/libnyx_agent/: .gitignore  Makefile  Makefile.inc
linux-user/scripts/: .gitignore  Makefile  bless_initrd.sh  gen_initrd.sh  gen_sharedir.sh
linux-user/syz-agent/: .gitignore  INSTALL.md  Makefile  agent.sh  syzkaller.patch
linux-user/tests/: .gitignore  Makefile  agent.sh  kafl.yaml
linux-user/vmcall/: .gitignore  Makefile  loader.sh
linux_x86_64-userspace/src/: nyx_agent.h
templates/windows/: .gitignore  Makefile  Vagrantfile_template  playbook.yml  (+2 more)
uefi_ovmf_64/: compile-dxe.sh  compile.sh  edk2_kafl.patch  edk2_kafl_ovmf.patch  edk2_kafl_smm.patch  kafl.yaml  run.sh
windows_x86_64/: .gitignore  Makefile  README.md  Vagrantfile  compile.sh  kafl.yaml  setup_target.sh
windows_x86_64-userspace/: Makefile  Vagrantfile  kafl.yaml  setup_target.yml
zephyr_x86_32/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  compile.sh  prj.conf  run.sh  zephyr.yml
zephyr_x86_32/src/: kafl_user.h  main.c  target_fs.c  target_json.c  target_test.c
(+54 files in other folders)
